# td-remote

./: fp-lib-table  td-remote.kicad_pcb  td-remote.kicad_pro  td-remote.kicad_sch
td-remote-firmware/: Cargo.toml  flash.sh
td-remote-firmware/.cargo/: config
td-remote-firmware/src/: main.rs
td-remote-top/: td-remote-top.kicad_pcb  td-remote-top.kicad_pro
td-remote.pretty/: 20021122-00010T4LF.kicad_mod  BatteryHolder_Keystone_2991TR.kicad_mod  BatteryHolder_Keystone_3002_1x2032_noneg.kicad_mod  LED_Kingbright_APA3010_3x1.5mm_Horizontal.kicad_mod  WA-SMST-M2.kicad_mod
